First compilable RIsCV fake backend
- Added architecture specific files -riscv*.cc/*.h by coping from mips64
- Modified common files.
  - Not sured modifications are marked as FIXME: RISCV porting

--- a/test/cctest/BUILD.gn
+++ b/test/cctest/BUILD.gn
@@ -381,7 +381,13 @@ v8_source_set("cctest_sources") {
       "test-assembler-s390.cc",
       "test-disasm-s390.cc",
     ]
-  }
+  } else if (v8_current_cpu == "riscv64" || v8_current_cpu == "riscv32") {
+    sources += [  ### gcmole(arch:riscv) ###
+      "test-assembler-riscv.cc",
+      "test-disasm-riscv.cc",
+      "test-macro-assembler-riscv.cc",
+    ]
+  } 
 
   configs = [
     "../..:external_config",
@@ -416,7 +422,8 @@ v8_source_set("cctest_sources") {
       v8_current_cpu == "arm" || v8_current_cpu == "arm64" ||
       v8_current_cpu == "s390" || v8_current_cpu == "s390x" ||
       v8_current_cpu == "mips" || v8_current_cpu == "mips64" ||
-      v8_current_cpu == "mipsel" || v8_current_cpu == "mipsel64") {
+      v8_current_cpu == "mipsel" || v8_current_cpu == "mipsel64" ||
+      v8_current_cpu == "riscv32" || v8_current_cpu == "riscv64") {
     # Disable fmadd/fmsub so that expected results match generated code in
     # RunFloat64MulAndFloat64Add1 and friends.
     if (!is_win) {
