--- a/BUILD.gn
+++ b/BUILD.gn
@@ -547,7 +547,7 @@ config("toolchain") {
 
   # Mips64el/mipsel simulators.
   if (target_is_simulator &&
-      (v8_current_cpu == "mipsel" || v8_current_cpu == "mips64el")) {
+      (v8_current_cpu == "mipsel" || v8_current_cpu == "mips64el" || v8_current_cpu == "riscv64")) {
     defines += [ "_MIPS_TARGET_SIMULATOR" ]
   }
 
@@ -649,6 +649,23 @@ config("toolchain") {
     }
   }
 
+  # Under simulator build, compiler will not provide __riscv_xlen. Define here
+  if (v8_current_cpu == "riscv32") {
+    defines += [ "V8_TARGET_ARCH_RISCV" ]
+    defines += [ "__riscv_xlen=32" ]
+  }
+
+  if (v8_current_cpu == "riscv64") {
+    defines += [ "V8_TARGET_ARCH_RISCV" ]
+    defines += [ "__riscv_xlen=64" ]
+    #FIXME: Temporarily use MIPS macro for the building.
+    defines += [
+        "__mips__",
+        "__mips_hard_float=1",
+        "CAN_USE_FPU_INSTRUCTIONS",
+      ]
+  }
+
   if (v8_current_cpu == "x86") {
     defines += [ "V8_TARGET_ARCH_IA32" ]
     if (is_win) {
@@ -737,7 +754,7 @@ config("toolchain") {
     }
 
     if (v8_current_cpu == "x64" || v8_current_cpu == "arm64" ||
-        v8_current_cpu == "mips64el") {
+        v8_current_cpu == "mips64el" || v8_current_cpu == "riscv64") {
       cflags += [ "-Wshorten-64-to-32" ]
     }
   }
@@ -1673,6 +1690,11 @@ v8_source_set("v8_initializers") {
     sources += [
       ### gcmole(arch:s390) ###
       "src/builtins/s390/builtins-s390.cc",
+    ]
+  } else if (v8_current_cpu == "riscv64" || v8_current_cpu == "riscv32") {
+    sources += [
+      ### gcmole(arch:riscv) ###
+      "src/builtins/riscv/builtins-riscv.cc",
     ]
   }
 
@@ -3332,7 +3354,34 @@ v8_source_set("v8_base_without_compiler") {
       "src/regexp/s390/regexp-macro-assembler-s390.h",
       "src/wasm/baseline/s390/liftoff-assembler-s390.h",
     ]
-  }
+  } else if (v8_current_cpu == "riscv64" || v8_current_cpu == "riscv32") {
+    sources += [  ### gcmole(arch:riscv) ###
+      "src/codegen/riscv/assembler-riscv-inl.h",
+      "src/codegen/riscv/assembler-riscv.cc",
+      "src/codegen/riscv/assembler-riscv.h",
+      "src/codegen/riscv/constants-riscv.cc",
+      "src/codegen/riscv/constants-riscv.h",
+      "src/codegen/riscv/cpu-riscv.cc",
+      "src/codegen/riscv/interface-descriptors-riscv.cc",
+      "src/codegen/riscv/macro-assembler-riscv.cc",
+      "src/codegen/riscv/macro-assembler-riscv.h",
+      "src/codegen/riscv/register-riscv.h",
+      "src/compiler/backend/riscv/code-generator-riscv.cc",
+      "src/compiler/backend/riscv/instruction-codes-riscv.h",
+      "src/compiler/backend/riscv/instruction-scheduler-riscv.cc",
+      "src/compiler/backend/riscv/instruction-selector-riscv.cc",
+      "src/debug/riscv/debug-riscv.cc",
+      "src/deoptimizer/riscv/deoptimizer-riscv.cc",
+      "src/diagnostics/riscv/disasm-riscv.cc",
+      "src/execution/riscv/frame-constants-riscv.cc",
+      "src/execution/riscv/frame-constants-riscv.h",
+      "src/execution/riscv/simulator-riscv.cc",
+      "src/execution/riscv/simulator-riscv.h",
+      "src/regexp/riscv/regexp-macro-assembler-riscv.cc",
+      "src/regexp/riscv/regexp-macro-assembler-riscv.h",
+      "src/wasm/baseline/riscv/liftoff-assembler-riscv.h",
+    ]
+  } 
 
   configs = [ ":internal_config" ]
 
@@ -3420,7 +3469,9 @@ v8_source_set("v8_base_without_compiler") {
   if (v8_current_cpu == "mips" || v8_current_cpu == "mipsel" ||
       v8_current_cpu == "mips64" || v8_current_cpu == "mips64el" ||
       v8_current_cpu == "ppc" || v8_current_cpu == "ppc64" ||
-      v8_current_cpu == "s390" || v8_current_cpu == "s390x") {
+      v8_current_cpu == "s390" || v8_current_cpu == "s390x" || 
+      v8_current_cpu == "riscv64" || v8_current_cpu == "riscv32") {
+      #FIXME: RISCV porting: RISCV may provide CAS instruction  
     libs += [ "atomic" ]
   }
 
@@ -3750,7 +3801,7 @@ v8_component("v8_libbase") {
   }
 
   if (is_ubsan && (v8_current_cpu == "x86" || v8_current_cpu == "arm" ||
-                   v8_current_cpu == "mips")) {
+                   v8_current_cpu == "mips" || v8_current_cpu == "riscv32")) {
     # Special UBSan 32-bit requirement.
     sources += [ "src/base/ubsan.cc" ]
   }
