Fix comment about enable_rust
Followup from https://chromium-review.googlesource.com/c/v8/v8/+/6254457

Change-Id: I6a6a69646ed93cac59133c949a4c7448f6c58ffc
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6654558
Auto-Submit: Manish Goregaokar <manishearth@google.com>
Reviewed-by: Toon Verwaest <verwaest@chromium.org>
Commit-Queue: Toon Verwaest <verwaest@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101009}

--- a/.gn
+++ b/.gn
@@ -28,7 +28,7 @@ default_args = {
   # Disable js dependencies like the closure compiler.
   enable_js_protobuf = false
 
-  # Disable rust dependencies.
+  # Enable rust dependencies.
   enable_rust = true
 
   # Needed only for std::atomic_ref<T> for large Ts http://crbug.com/402171653
