Revert "gni: Use default_init_stack_vars config in modules build"
This reverts commit fa169a62df5ef7f49d70aa2854ed548bd731f11f.

Reason for revert:
Clang was rolled in https://crrev.com/c/6658267 and this is not
necessary anymore.

Bug: 40440396, 417956700
Original change's description:
> gni: Use default_init_stack_vars config in modules build
>
> Currently, module builder is broken due to incompatible flag usage due
> to config mismatch in
> https://ci.chromium.org/ui/p/chromium/builders/ci/linux-modules-compile-fyi-rel/33879/overview
> This is a temporal workaround until next clang roll to suppress the
> errors in modules build.
>
> Bug: 40440396, 417956700
> Change-Id: If1cd01728dbe8c6e0a5d05244b45aa744fe8966a
> Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6590612
> Reviewed-by: Dominik Inführ <dinfuehr@chromium.org>
> Commit-Queue: Dominik Inführ <dinfuehr@chromium.org>
> Auto-Submit: Takuto Ikuta <tikuta@chromium.org>
> Reviewed-by: Michael Achenbach <machenbach@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#100537}

Bug: 40440396, 417956700
Change-Id: I84706bb28685f4d7b4f5219448521d95cbfc3c19
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6671848
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Auto-Submit: Takuto Ikuta <tikuta@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101045}

--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -303,9 +303,7 @@ if (is_debug && !v8_optimized_debug) {
   }
 }
 
-if (!is_debug &&
-    # TODO(crbug.com/417956700): Remove this after clang roll.
-    !use_libcxx_modules) {
+if (!is_debug) {
   v8_remove_configs += [
     # Too much performance impact, unclear security benefit.
     "//build/config/compiler:default_init_stack_vars",
