Reland "[maglev] Add MaglevReducer"
This is a reland of commit 356709fabdec2edc0704478449467ccbaaab1f99

This rebases the reland after moving inline functions in maglev graph
builder from header to source files. This fixes the compilation
on windows issue: circular dependencies (the reason from the revert).

It also splits ReducerBase in many concepts, so that other uses of
the reducer like the phi representation selector does not need
to implement all methods to use AddNewNode.

Finally it fixes the issue where nodes added via the reducer
like in BuildSmiUntag would not call MarkPossibleSideEffect
in the graph builder.

Original change's description:
> [maglev] Add MaglevReducer
>
> This change introduces the `MaglevReducer` to share common logic
> for creating and reducing nodes between the Maglev graph builder
> and other optimization passes.
>
> As a first step, the `AddNewNode` logic has been moved into the
> `MaglevReducer`.
>
> This new component is now used by the `MaglevGraphBuilder`,
> `MaglevInliner`, and `MaglevPhiRepresentationSelector`.
>
> Bug: 424157317
> Change-Id: Icd5c893ea9f39908edf1877dee5b20c5c3850d40
> Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6641211
> Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
> Commit-Queue: Victor Gomes <victorgomes@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#100899}

Bug: 424157317
Change-Id: Ic41f67c1c90fb48698cfcc8ad2414e66216aea88
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6657959
Reviewed-by: Olivier Flückiger <olivf@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101092}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2868,6 +2868,8 @@ filegroup(
             "src/maglev/maglev-pipeline-statistics.h",
             "src/maglev/maglev-post-hoc-optimizations-processors.h",
             "src/maglev/maglev-pre-regalloc-codegen-processors.h",
+            "src/maglev/maglev-reducer-inl.h",
+            "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-regalloc-data.h",
             "src/maglev/maglev-regalloc.h",
             "src/maglev/maglev-register-frame-array.h",
@@ -2881,6 +2883,7 @@ filegroup(
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-printer.cc",
             "src/maglev/maglev-graph.cc",
+            "src/maglev/maglev-inlining.cc",
             "src/maglev/maglev-interpreter-frame-state.cc",
             "src/maglev/maglev-ir.cc",
             "src/maglev/maglev-phi-representation-selector.cc",
@@ -3648,12 +3651,15 @@ filegroup(
             "src/maglev/maglev-graph-printer.h",
             "src/maglev/maglev-graph-processor.h",
             "src/maglev/maglev-graph-verifier.h",
+            "src/maglev/maglev-inlining.cc",
             "src/maglev/maglev-inlining.h",
             "src/maglev/maglev-interpreter-frame-state.cc",
             "src/maglev/maglev-interpreter-frame-state.h",
             "src/maglev/maglev-ir.cc",
             "src/maglev/maglev-ir.h",
             "src/maglev/maglev-ir-inl.h",
+            "src/maglev/maglev-reducer-inl.h",
+            "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-register-frame-array.h",
             "src/maglev/maglev-phi-representation-selector.cc",
             "src/maglev/maglev-phi-representation-selector.h",
