--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4465,6 +4465,8 @@ v8_header_set("v8_internal_headers") {
       "src/maglev/maglev-pipeline-statistics.h",
       "src/maglev/maglev-post-hoc-optimizations-processors.h",
       "src/maglev/maglev-pre-regalloc-codegen-processors.h",
+      "src/maglev/maglev-reducer-inl.h",
+      "src/maglev/maglev-reducer.h",
       "src/maglev/maglev-regalloc-data.h",
       "src/maglev/maglev-regalloc.h",
       "src/maglev/maglev-register-frame-array.h",
@@ -5220,6 +5222,7 @@ if (!v8_enable_maglev) {
     "src/maglev/maglev-graph-builder.cc",
     "src/maglev/maglev-graph-printer.cc",
     "src/maglev/maglev-graph.cc",
+    "src/maglev/maglev-inlining.cc",
     "src/maglev/maglev-interpreter-frame-state.cc",
     "src/maglev/maglev-ir.cc",
     "src/maglev/maglev-phi-representation-selector.cc",
@@ -5952,6 +5955,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/maglev/maglev-graph-builder.cc",
       "src/maglev/maglev-graph-printer.cc",
       "src/maglev/maglev-graph.cc",
+      "src/maglev/maglev-inlining.cc",
       "src/maglev/maglev-interpreter-frame-state.cc",
       "src/maglev/maglev-ir.cc",
       "src/maglev/maglev-phi-representation-selector.cc",
