--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -261,6 +261,7 @@ v8_source_set("v8_unittests_sources") {
     "api/smi-tagging-unittest.cc",
     "api/v8-array-unittest.cc",
     "api/v8-maybe-unittest.cc",
+    "api/v8-memory-span-unittest.cc",
     "api/v8-object-unittest.cc",
     "api/v8-script-unittest.cc",
     "api/v8-value-unittest.cc",
