[test] Set environment variables for sandbox hardware support
Bug: 428152522, 428179540
Change-Id: If1e4de62401e4bb0d4fa73f67fdfaa71589ff9fd
Cq-Include-Trybots: luci.v8.try:v8_linux64_pku_dbg
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6680632
Reviewed-by: Samuel Groß <saelo@chromium.org>
Commit-Queue: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101096}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2890,6 +2890,7 @@ action("v8_dump_build_config") {
     "pointer_compression_shared_cage=$v8_enable_pointer_compression_shared_cage",
     "runtime_call_stats=$v8_enable_runtime_call_stats",
     "sandbox=$v8_enable_sandbox",
+    "sandbox_hardware_support=$v8_enable_sandbox_hardware_support",
     "simd_mips=$simd_mips",
     "simulator_run=$simulator_run",
     "single_generation=$v8_enable_single_generation",
