[wasm interpreter][fuzzer] Add interpreter fuzzer for all features with multiple modules
This patch adds a new fuzzer target that tests the Wasm interpreter with
all features enabled (WasmGC + SIMD) using multiple modules.

The fuzzer generates random Wasm modules with external functions and
tests module interactions through the interpreter, helping identify
potential issues in cross-module communication.

I also fix missing dependency for Wasm interpreter fuzzer common.
Now it passes gn gen check with v8_enable_drumbrake = true.

Change-Id: Ibf772fc9c0b760e9132676e6680dddeaeba1d03f
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6687756
Reviewed-by: Paolo Severini <paolosev@microsoft.com>
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Commit-Queue: Emmanuel Romero Ruiz <emromero@microsoft.com>
Cr-Commit-Position: refs/heads/main@{#101142}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8069,8 +8069,13 @@ if (v8_enable_webassembly) {
       ]
 
       deps = [
+        ":fuzzer_support",
         ":v8_internal_headers",
+      ]
+
+      public_deps = [
         ":wasm_fuzzer_common",
+        ":wasm_test_common",
       ]
 
       configs = [
