[heap] Rename PagePool to MemoryPool
The pool is not just used for pages but memory in general.

Bug: 425248660
Change-Id: I7be596da265071b41f4db04aa119d8638d35af10
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6684907
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Dominik Inführ <dinfuehr@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101118}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1804,6 +1804,8 @@ filegroup(
         "src/heap/memory-measurement.cc",
         "src/heap/memory-measurement.h",
         "src/heap/memory-measurement-inl.h",
+        "src/heap/memory-pool.cc",
+        "src/heap/memory-pool.h",
         "src/heap/memory-reducer.cc",
         "src/heap/memory-reducer.h",
         "src/heap/minor-gc-job.cc",
@@ -1821,8 +1823,6 @@ filegroup(
         "src/heap/page-metadata.cc",
         "src/heap/page-metadata.h",
         "src/heap/page-metadata-inl.h",
-        "src/heap/page-pool.cc",
-        "src/heap/page-pool.h",
         "src/heap/paged-spaces.cc",
         "src/heap/paged-spaces.h",
         "src/heap/paged-spaces-inl.h",
