--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3896,6 +3896,7 @@ v8_header_set("v8_internal_headers") {
     "src/heap/memory-chunk.h",
     "src/heap/memory-measurement-inl.h",
     "src/heap/memory-measurement.h",
+    "src/heap/memory-pool.h",
     "src/heap/memory-reducer.h",
     "src/heap/minor-gc-job.h",
     "src/heap/minor-mark-sweep-inl.h",
@@ -3908,7 +3909,6 @@ v8_header_set("v8_internal_headers") {
     "src/heap/object-lock.h",
     "src/heap/object-stats.h",
     "src/heap/page-metadata.h",
-    "src/heap/page-pool.h",
     "src/heap/paged-spaces-inl.h",
     "src/heap/paged-spaces.h",
     "src/heap/parallel-work-item.h",
@@ -5641,6 +5641,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/heap/memory-chunk-metadata.cc",
     "src/heap/memory-chunk.cc",
     "src/heap/memory-measurement.cc",
+    "src/heap/memory-pool.cc",
     "src/heap/memory-reducer.cc",
     "src/heap/minor-gc-job.cc",
     "src/heap/minor-mark-sweep.cc",
@@ -5648,7 +5649,6 @@ v8_source_set("v8_base_without_compiler") {
     "src/heap/new-spaces.cc",
     "src/heap/object-stats.cc",
     "src/heap/page-metadata.cc",
-    "src/heap/page-pool.cc",
     "src/heap/paged-spaces.cc",
     "src/heap/pretenuring-handler.cc",
     "src/heap/read-only-heap.cc",
