[base] Port base::FunctionRef from Chromium
absl::FunctionRef is banned in Chromium because it is too loose with
implicit conversions. base::FunctionRef is a wrapper around it which
checks for and forbids these conversions. This wrapper would be useful
in V8 too, so port it to V8 along with the relevant helper classes.

Change-Id: Ib67e1b7fe6445860fbcc0dad092b9a4f427bb433
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6689117
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Auto-Submit: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101140}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -800,6 +800,8 @@ filegroup(
         "src/base/flags.h",
         "src/base/fpu.cc",
         "src/base/fpu.h",
+        "src/base/functional/bind-internal.h",
+        "src/base/functional/function-ref.h",
         "src/base/free_deleter.h",
         "src/base/hashing.h",
         "src/base/hashmap.h",
@@ -891,6 +893,7 @@ filegroup(
         "src/base/template-utils.h",
         "src/base/threaded-list.h",
         "src/base/timezone-cache.h",
+        "src/base/types/is-instantiation.h",
         "src/base/utils/random-number-generator.cc",
         "src/base/utils/random-number-generator.h",
         "src/base/vector.h",
