--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6629,6 +6629,8 @@ v8_component("v8_libbase") {
     "src/base/fpu.cc",
     "src/base/fpu.h",
     "src/base/free_deleter.h",
+    "src/base/functional/bind-internal.h",
+    "src/base/functional/function-ref.h",
     "src/base/hashing.h",
     "src/base/hashmap-entry.h",
     "src/base/hashmap.h",
@@ -6727,6 +6729,7 @@ v8_component("v8_libbase") {
     "src/base/template-utils.h",
     "src/base/threaded-list.h",
     "src/base/timezone-cache.h",
+    "src/base/types/is-instantiation.h",
     "src/base/utils/random-number-generator.cc",
     "src/base/utils/random-number-generator.h",
     "src/base/vector.h",
