[sandbox] Make Wasm tiering budget array accessible to sandboxed code
The Wasm tiering_budgets array is updated during execution of Wasm
functions and used to make tier-up decisions for Wasm code. Since it is
written to directly from Wasm code, it must be accessible in sandboxed
execution mode. As the array contains untrusted data (that can safely be
corrupted by an attacker), this CL simply moves the array into the
sandbox to make it accessible.

For that purpose, this CL creates a basic in-sandbox memory allocator
based on V8's array buffer allocator implementation. Since that
allocator is quite unperformant, the change is currently still behind
V8_ENABLE_SANDBOX_HARDWARE_SUPPORT, but we should make this change in
all configurations once we have a better in-sandbox memory allocator.

Bug: 350324877, 427410040, 427464384
Change-Id: I5860ebf621203ef662bd59b6fb11ecf1babcb650
Cq-Include-Trybots: luci.v8.try:v8_linux64_pku_dbg,v8_linux64_pku_rel
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6668474
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Commit-Queue: Samuel Groß <saelo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101151}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2460,6 +2460,7 @@ filegroup(
         "src/sandbox/hardware-support.h",
         "src/sandbox/sandbox.cc",
         "src/sandbox/sandbox.h",
+        "src/sandbox/sandbox-malloc.h",
         "src/sandbox/sandboxed-pointer.h",
         "src/sandbox/sandboxed-pointer-inl.h",
         "src/sandbox/tagged-payload.h",
