--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4317,6 +4317,7 @@ v8_header_set("v8_internal_headers") {
     "src/sandbox/isolate.h",
     "src/sandbox/js-dispatch-table-inl.h",
     "src/sandbox/js-dispatch-table.h",
+    "src/sandbox/sandbox-malloc.h",
     "src/sandbox/sandbox.h",
     "src/sandbox/sandboxed-pointer-inl.h",
     "src/sandbox/sandboxed-pointer.h",
