[maglev] Make MaglevGraphLabeler thread_local
Bug: 427955263
Change-Id: If5f31738fac28571a7a1857e947d78d64da09475
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6680607
Reviewed-by: Victor Gomes <victorgomes@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Raphaël Hérouart <rherouart@google.com>
Cr-Commit-Position: refs/heads/main@{#101156}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2885,6 +2885,7 @@ filegroup(
             "src/maglev/maglev-compiler.cc",
             "src/maglev/maglev-concurrent-dispatcher.cc",
             "src/maglev/maglev-graph-builder.cc",
+            "src/maglev/maglev-graph-labeller.cc",
             "src/maglev/maglev-graph-printer.cc",
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-inlining.cc",
@@ -3651,6 +3652,7 @@ filegroup(
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-graph.h",
             "src/maglev/maglev-graph-labeller.h",
+            "src/maglev/maglev-graph-labeller.cc",
             "src/maglev/maglev-graph-printer.cc",
             "src/maglev/maglev-graph-printer.h",
             "src/maglev/maglev-graph-processor.h",
