--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5222,6 +5222,7 @@ if (!v8_enable_maglev) {
     "src/maglev/maglev-compilation-info.cc",
     "src/maglev/maglev-compilation-unit.cc",
     "src/maglev/maglev-graph-builder.cc",
+    "src/maglev/maglev-graph-labeller.cc",
     "src/maglev/maglev-graph-printer.cc",
     "src/maglev/maglev-graph.cc",
     "src/maglev/maglev-inlining.cc",
@@ -5955,6 +5956,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/maglev/maglev-compiler.cc",
       "src/maglev/maglev-concurrent-dispatcher.cc",
       "src/maglev/maglev-graph-builder.cc",
+      "src/maglev/maglev-graph-labeller.cc",
       "src/maglev/maglev-graph-printer.cc",
       "src/maglev/maglev-graph.cc",
       "src/maglev/maglev-inlining.cc",
