[maglev] Fix post-hoc-opt header inclusions
We should not use an inlined function implemented in -inl.h file.

This moves truncation pass to its own file and the 2 troublesome
implementations to maglev-ir.h.

Change-Id: Ie8b66c14a66e057d11c8bad16046067cff87d3b6
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6695548
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101190}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2869,6 +2869,7 @@ filegroup(
             "src/maglev/maglev-ir-inl.h",
             "src/maglev/maglev-ir.h",
             "src/maglev/maglev-phi-representation-selector.h",
+            "src/maglev/maglev-truncation.h",
             "src/maglev/maglev-pipeline-statistics.h",
             "src/maglev/maglev-post-hoc-optimizations-processors.h",
             "src/maglev/maglev-pre-regalloc-codegen-processors.h",
@@ -2892,6 +2893,7 @@ filegroup(
             "src/maglev/maglev-interpreter-frame-state.cc",
             "src/maglev/maglev-ir.cc",
             "src/maglev/maglev-phi-representation-selector.cc",
+            "src/maglev/maglev-truncation.cc",
             "src/maglev/maglev-pipeline-statistics.cc",
             "src/maglev/maglev-regalloc.cc",
             "src/maglev/maglev.cc",
@@ -3669,6 +3671,8 @@ filegroup(
             "src/maglev/maglev-register-frame-array.h",
             "src/maglev/maglev-phi-representation-selector.cc",
             "src/maglev/maglev-phi-representation-selector.h",
+            "src/maglev/maglev-truncation.cc",
+            "src/maglev/maglev-truncation.h",
             "src/maglev/maglev-post-hoc-optimizations-processors.h",
             "src/maglev/maglev-pre-regalloc-codegen-processors.h",
         ],
