--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4470,6 +4470,7 @@ v8_header_set("v8_internal_headers") {
       "src/maglev/maglev-regalloc-data.h",
       "src/maglev/maglev-regalloc.h",
       "src/maglev/maglev-register-frame-array.h",
+      "src/maglev/maglev-truncation.h",
       "src/maglev/maglev.h",
     ]
     if (v8_current_cpu == "arm") {
@@ -5227,6 +5228,7 @@ if (!v8_enable_maglev) {
     "src/maglev/maglev-interpreter-frame-state.cc",
     "src/maglev/maglev-ir.cc",
     "src/maglev/maglev-phi-representation-selector.cc",
+    "src/maglev/maglev-truncation.cc",
   ]
 }
 
@@ -5963,6 +5965,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/maglev/maglev-phi-representation-selector.cc",
       "src/maglev/maglev-pipeline-statistics.cc",
       "src/maglev/maglev-regalloc.cc",
+      "src/maglev/maglev-truncation.cc",
       "src/maglev/maglev.cc",
     ]
     if (v8_current_cpu == "arm") {
