[maglev] Port const string add optimization from JSNativeContextSpecialization
Bug: 428882137
Change-Id: Ifa07d5aab27268c368493bfc5eb08699a8a88262
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6695690
Auto-Submit: Marja Hölttä <marja@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Reviewed-by: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101193}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3210,6 +3210,8 @@ filegroup(
         "src/compiler/common-operator.h",
         "src/compiler/common-operator-reducer.cc",
         "src/compiler/common-operator-reducer.h",
+        "src/compiler/common-utils.cc",
+        "src/compiler/common-utils.h",
         "src/compiler/compilation-dependencies.cc",
         "src/compiler/compilation-dependencies.h",
         "src/compiler/compiler-source-position-table.cc",
