--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3532,6 +3532,7 @@ v8_header_set("v8_internal_headers") {
     "src/compiler/common-node-cache.h",
     "src/compiler/common-operator-reducer.h",
     "src/compiler/common-operator.h",
+    "src/compiler/common-utils.h",
     "src/compiler/compilation-dependencies.h",
     "src/compiler/compiler-source-position-table.h",
     "src/compiler/constant-folding-reducer.h",
@@ -5085,6 +5086,7 @@ v8_compiler_sources = [
   "src/compiler/common-node-cache.cc",
   "src/compiler/common-operator-reducer.cc",
   "src/compiler/common-operator.cc",
+  "src/compiler/common-utils.cc",
   "src/compiler/compilation-dependencies.cc",
   "src/compiler/compiler-source-position-table.cc",
   "src/compiler/constant-folding-reducer.cc",
