--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3637,6 +3637,7 @@ v8_header_set("v8_internal_headers") {
     "src/compiler/turboshaft/copying-phase.h",
     "src/compiler/turboshaft/csa-branch-elimination-phase.h",
     "src/compiler/turboshaft/csa-early-machine-optimization-phase.h",
+    "src/compiler/turboshaft/csa-effects-computation.h",
     "src/compiler/turboshaft/csa-late-escape-analysis-phase.h",
     "src/compiler/turboshaft/csa-load-elimination-phase.h",
     "src/compiler/turboshaft/csa-memory-optimization-phase.h",
@@ -4407,6 +4408,7 @@ v8_header_set("v8_internal_headers") {
     "src/zone/zone-type-traits.h",
     "src/zone/zone-utils.h",
     "src/zone/zone.h",
+    "third_party/rapidhash-v8/rapidhash.h",
     "third_party/siphash/halfsiphash.h",
     "third_party/utf8-decoder/utf8-decoder.h",
   ]
