--- a/BUILD.gn
+++ b/BUILD.gn
@@ -585,6 +585,8 @@ if (v8_multi_arch_build &&
     rebase_path(get_label_info(":d8", "root_out_dir"), root_build_dir) ==
     "clang_x64_fuzzer_experiments") {
   v8_enable_pointer_compression = !v8_enable_pointer_compression
+  v8_enable_experimental_undefined_double =
+      !v8_enable_experimental_undefined_double
   v8_lower_limits_mode = !v8_lower_limits_mode
 }
 
