--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2888,6 +2888,7 @@ filegroup(
             "src/maglev/maglev-deopt-frame-visitor.h",
             "src/maglev/maglev-graph-builder.h",
             "src/maglev/maglev-graph-labeller.h",
+            "src/maglev/maglev-graph-optimizer.h",
             "src/maglev/maglev-graph-printer.h",
             "src/maglev/maglev-graph-processor.h",
             "src/maglev/maglev-graph-verifier.h",
@@ -2915,6 +2916,7 @@ filegroup(
             "src/maglev/maglev-concurrent-dispatcher.cc",
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-labeller.cc",
+            "src/maglev/maglev-graph-optimizer.cc",
             "src/maglev/maglev-graph-printer.cc",
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-inlining.cc",
@@ -3681,6 +3683,8 @@ filegroup(
             "src/maglev/maglev-compilation-unit.h",
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-builder.h",
+            "src/maglev/maglev-graph-optimizer.cc",
+            "src/maglev/maglev-graph-optimizer.h",
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-graph.h",
             "src/maglev/maglev-graph-labeller.h",
