Reland "[maglev] Add boilerplate for the MaglevGraphOptimizer pass"
This is a reland of commit e0b7cfc0454738393406e0978af1057b65b45aac

Fix:
Add missing node
VisitLoadHoleyFixedDoubleArrayElementCheckedNotUndefinedOrHole
when compiling with v8_enable_experimental_undefined_double.

Original change's description:
> [maglev] Add boilerplate for the MaglevGraphOptimizer pass
>
> As an example, we are able to constant fold addition
> through non-eager inlined functions.
>
> This process current only 3 nodes:
> CheckedSmiUntag, Int32ToNumber and Int32AddWithOverflow
>
> Bug: 424157317
> Change-Id: I4eeb15bdf2b711de84a0816fc621ee67f624339a
> Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6694957
> Commit-Queue: Victor Gomes <victorgomes@chromium.org>
> Reviewed-by: Leszek Swirski <leszeks@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#101231}

Bug: 424157317
Change-Id: Ia97d8ab9a097fa31db9383b61b274b7d8b572fb0
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6700158
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101255}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2889,6 +2889,7 @@ filegroup(
             "src/maglev/maglev-deopt-frame-visitor.h",
             "src/maglev/maglev-graph-builder.h",
             "src/maglev/maglev-graph-labeller.h",
+            "src/maglev/maglev-graph-optimizer.h",
             "src/maglev/maglev-graph-printer.h",
             "src/maglev/maglev-graph-processor.h",
             "src/maglev/maglev-graph-verifier.h",
@@ -2916,6 +2917,7 @@ filegroup(
             "src/maglev/maglev-concurrent-dispatcher.cc",
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-labeller.cc",
+            "src/maglev/maglev-graph-optimizer.cc",
             "src/maglev/maglev-graph-printer.cc",
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-inlining.cc",
@@ -3682,6 +3684,8 @@ filegroup(
             "src/maglev/maglev-compilation-unit.h",
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-builder.h",
+            "src/maglev/maglev-graph-optimizer.cc",
+            "src/maglev/maglev-graph-optimizer.h",
             "src/maglev/maglev-graph.cc",
             "src/maglev/maglev-graph.h",
             "src/maglev/maglev-graph-labeller.h",
