--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4455,6 +4455,7 @@ v8_header_set("v8_internal_headers") {
       "src/maglev/maglev-deopt-frame-visitor.h",
       "src/maglev/maglev-graph-builder.h",
       "src/maglev/maglev-graph-labeller.h",
+      "src/maglev/maglev-graph-optimizer.h",
       "src/maglev/maglev-graph-printer.h",
       "src/maglev/maglev-graph-processor.h",
       "src/maglev/maglev-graph-verifier.h",
@@ -5225,6 +5226,7 @@ if (!v8_enable_maglev) {
     "src/maglev/maglev-compilation-unit.cc",
     "src/maglev/maglev-graph-builder.cc",
     "src/maglev/maglev-graph-labeller.cc",
+    "src/maglev/maglev-graph-optimizer.cc",
     "src/maglev/maglev-graph-printer.cc",
     "src/maglev/maglev-graph.cc",
     "src/maglev/maglev-inlining.cc",
@@ -5960,6 +5962,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/maglev/maglev-concurrent-dispatcher.cc",
       "src/maglev/maglev-graph-builder.cc",
       "src/maglev/maglev-graph-labeller.cc",
+      "src/maglev/maglev-graph-optimizer.cc",
       "src/maglev/maglev-graph-printer.cc",
       "src/maglev/maglev-graph.cc",
       "src/maglev/maglev-inlining.cc",
