Revert "Remove g_thread_in_wasm_code flag"
This reverts commit 73288e18ba967b06e73cacd8f1659529915e3097.

Reason for revert: Suspected to cause issues on win-asan, see https://crbug.com/429490604

Bug: 350324877, 40192807, 429490604
Original change's description:
> Remove g_thread_in_wasm_code flag
>
> Keeping track of whether a thread is currently executing Wasm code or
> not has become quite complex (see size of this change) and therefore a
> maintenance burden. Furthermore, this feature now conflicts with future
> V8 sandbox advancements as we want to forbid writes from sandboxed code
> (which includes all Wasm code) to out-of-sandbox memory. As such, we can
> no longer write to thread-local storage (where the flag was stored).
>
> This CL replaces the flag with a simpler guarding mechanism that ensures
> that the trap handler is robust against nested faults and deadlocks. In
> essence, we now set a thread-local flag (only) when entering the trap
> handler or taking one of the locks used by it. If the flag is already
> set when entering the trap handler, then we bail out immediately as it
> means that we're either handling a nested fault (which we shouldn't) or
> risk running into a deadlock because the current thread holds one of the
> locks required by the trap handler.
>
> Bug: 350324877, 40192807
> Change-Id: Idb9fce83ac9b46ab04fd93d5bdbd8cb8c0722488
> Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6650680
> Reviewed-by: Clemens Backes <clemensb@chromium.org>
> Reviewed-by: Mark Seaborn <mseaborn@chromium.org>
> Commit-Queue: Samuel Groß <saelo@chromium.org>
> Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
> Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#101213}

Bug: 350324877, 40192807
Change-Id: I16b4fa57459f9f460867fc56f9bf600e91536731
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6701597
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Reviewed-by: Matthias Liedt

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5866,6 +5866,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/runtime/runtime-test.cc",
     "src/runtime/runtime-trace.cc",
     "src/runtime/runtime-typedarray.cc",
+    "src/runtime/runtime-utils.cc",
     "src/runtime/runtime-weak-refs.cc",
     "src/runtime/runtime.cc",
     "src/sandbox/code-pointer-table.cc",
