[test/compiler] Migrate some cctests to unittests
Convert some cctests in the test/cctest/compiler directory to unittests.

The following three files are involved:

test/cctest/compiler/test-run-stackcheck.cc

test/cctest/compiler/test-run-unwinding-info.cc

test/cctest/compiler/test-run-variables.cc

Also, in the run-variables-unittest.cc test, we refactored it to use
some modern C++ conventions.

Bug: 42202728
Change-Id: Ibcbb15b91921db01539fb26411fd462933369272
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6706462
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Ho Cheung <hocheung@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101285}

--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -553,7 +553,10 @@ v8_source_set("v8_unittests_sources") {
       "compiler/run-jsexceptions-unittest.cc",
       "compiler/run-jsobjects-unittest.cc",
       "compiler/run-jsops-unittest.cc",
+      "compiler/run-stackcheck-unittest.cc",
       "compiler/run-tail-calls-unittest.cc",
+      "compiler/run-unwinding-info-unittest.cc",
+      "compiler/run-variables-unittest.cc",
       "compiler/schedule-unittest.cc",
       "compiler/scheduler-rpo-unittest.cc",
       "compiler/scheduler-unittest.cc",
