[test/compiler] Migrate test-linkage cctest to unittest
Convert test-linkage cctest in the test/cctest/compiler directory to
unittests.

The following files were refactored into unit tests:

test/cctest/compiler/test-linkage.cc

Also, in the linkage-unittest.cc test, we refactored it to use
some modern C++ conventions.

Bug: 42202728
Change-Id: Ie8bda321575b3c94cb670cc9e65199e3d0056d93
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6706463
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Ho Cheung <hocheung@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101284}

--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -529,6 +529,7 @@ v8_source_set("v8_unittests_sources") {
       "compiler/js-operator-unittest.cc",
       "compiler/js-typed-lowering-unittest.cc",
       "compiler/linkage-tail-call-unittest.cc",
+      "compiler/linkage-unittest.cc",
       "compiler/load-elimination-unittest.cc",
       "compiler/loop-peeling-unittest.cc",
       "compiler/machine-operator-reducer-unittest.cc",
