[ios blink] Check use_blink GN flag to enable WASM
Previously we were checking ios_deployment_target to be 18.4 exactly,
but that breaks when we upgrade the deployment target for iOS Blink to
26.0. Instead, just assume that the iOS Blink build will always support
executable code pages i.e. it will target at least 18.4 which it needs
to do anyway for many other requirements.

Bug: 40254930
Change-Id: I6a6a696460b78eae5c25a8c34a08935d820470da
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6725077
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Auto-Submit: Sunny Sachanandani <sunnyps@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101369}

--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -4,6 +4,7 @@
 
 import("//build/config/chrome_build.gni")
 import("//build/config/compiler/pgo/pgo.gni")
+import("//build/config/features.gni")
 import("//build/config/gclient_args.gni")
 import("//build/config/ios/config.gni")
 import("//build/config/ios/ios_sdk_overrides.gni")
@@ -93,9 +94,8 @@ declare_args() {
   # (is_ios is based on host_os).
   if (target_os == "ios") {
     if (target_platform == "iphoneos") {
-      # iOS executable code pages is in 18.4 SDK.
-      # TODO(dtapuska): Change this to an assert.
-      v8_enable_lite_mode = ios_deployment_target != "18.4"
+      # iOS executable code pages is in 18.4 SDK which the iOS + Blink targets.
+      v8_enable_lite_mode = !use_blink
     } else if (target_platform == "tvos") {
       # tvOS runs in single process mode and is not allowed to use JIT.
       # TODO(crbug.com/394710095): Enable the v8 lite mode to run v8 with the
