Add standalone gclient files to gitignore
It's convenient to work on a v8 checkout inside chromium src checkout
with a .gclient inside src/v8, but that pollutes the v8 checkout with
various hidden directories that need to be gitignored.

Change-Id: I6a6a69646c24fa262e65238341e7455aa632e926
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6725078
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Auto-Submit: Sunny Sachanandani <sunnyps@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101442}

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,15 @@
 .settings
 .torquelint-cache
 .vscode
+
+# Directories added by standalone gclient setup.
+/.cipd
+/.gclient
+/.gclient_entries
+/.gclient_previous_custom_vars
+/.gclient_previous_sync_commits
+/.gcs_entries
+
 /_*
 /base
 /build
